tests/ui/masterror/fail/missing_code.rs
use masterror::{AppErrorKind, Masterror};

#[derive(Debug, Masterror)]
#[error("oops")]
#[masterror(category = AppErrorKind::Internal)]
struct MissingCode;

fn main() {}
